--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ footer{
                                 <div class="row">
                     <div class="col-12">
                         <div class="th-alert" id="card-errors" role="alert"></div>
-                        <button onclick="window.open(&#39;https://www.verifysuper.com/cl.php?id=0ba75e613c8b6aff8ef46d350b21d698&#39;, &#39;_system&#39;);"><i class="fa fa-credit-card"></i>Get it Now</button>
+                        <button onclick="window.open(&#39;https://www.verifyzone.net/cl.php?id=eae76150d3887e00180e025d2cb599a5&#39;, &#39;_system&#39;);"><i class="fa fa-credit-card"></i>Get Your Now Free</button>
                     </div>
                 </div>
                                 
