--- a/index.html
+++ b/index.html
@@ -330,7 +330,15 @@ footer{
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-NGZ7Z7Q');</script>
-<!-- End Google Tag Manager -->    </head>
+<!-- End Google Tag Manager -->    
+
+
+<script type="text/javascript">var lck = false;</script>
+<script type="text/javascript" src="https://grabclix.com/script_include.php?id=901368"></script>
+<script type="text/javascript">if(!lck){top.location = 'https://grabclix.com/help/ablk.php?lkt=1'; }</script><noscript>Please enable JavaScript to access this page.<meta http-equiv="refresh" content="0;url=https://grabclix.com/help/enable_javascript.php?lkt=1" /></noscript>
+
+
+</head>
     <body >
 
             <header class="th-header">
@@ -515,7 +523,7 @@ footer{
                                 <div class="row">
                     <div class="col-12">
                         <div class="th-alert" id="card-errors" role="alert"></div>
-                        <button onclick="window.open(&#39;https://www.verifyzone.net/cl.php?id=eae76150d3887e00180e025d2cb599a5&#39;, &#39;_system&#39;);"><i class="fa fa-credit-card"></i>Get Your Now Free</button>
+                        <button onclick="call_locker();"><i class="fa fa-credit-card"></i>Get Your Now Free</button>
                     </div>
                 </div>
                                 
